<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/iv_logo"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/img_main_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/fl_start"
        app:layout_constraintBottom_toTopOf="@id/fl_bmi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_start_btn"
            android:gravity="center"
            android:text="@string/start"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_bmi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fl_history"
        app:layout_constraintTop_toBottomOf="@id/fl_start">

        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circular_shape_green"
            android:gravity="center"
            android:text="BMI"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/calculator"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fl_bmi"
        app:layout_constraintStart_toStartOf="@+id/fl_bmi"
        app:layout_constraintTop_toBottomOf="@id/fl_bmi" />

    <FrameLayout
        android:id="@+id/fl_history"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fl_bmi"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        android:background="@drawable/circular_shape_green">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_calendar_month_24"
            android:layout_gravity="center"
            android:background="@color/green"
            app:tint="@color/white"
           />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/history"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fl_history"
        app:layout_constraintStart_toStartOf="@+id/fl_history"
        app:layout_constraintTop_toBottomOf="@id/fl_history" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fl_start"
        android:layout_marginHorizontal="50dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Enter name"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>